// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedOverlayV2 — a11y visual checks (light & dark) matches accessibility + contrast expectations in dark mode (snapshot) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "stretch",
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "translateY": 16,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "stretch",
            "backgroundColor": "#1A3328",
            "borderColor": "rgba(34,34,34,0.08)",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "borderTopWidth": 1,
            "elevation": 14,
            "height": 1067,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -6,
              "width": 0,
            },
            "shadowOpacity": 0.16,
            "shadowRadius": 14,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1A3328",
              "paddingBottom": 4,
              "paddingTop": 8,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(255,255,255,0.24)",
                "borderRadius": 2,
                "height": 4,
                "width": 36,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "paddingBottom": 12,
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#1A3328",
                "borderBottomColor": "#E7E2D9",
                "borderBottomWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAF9",
                  "fontFamily": "PlusJakartaSans-Bold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 25,
                },
                {
                  "color": "#0E1116",
                  "fontWeight": "600",
                },
              ]
            }
          >
            New Log
          </Text>
        </View>
        <RCTScrollView
          contentContainerStyle={
            {
              "paddingBottom": 120,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    {
                      "marginBottom": 12,
                    },
                  ]
                }
              >
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": true,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#F8FAF9",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "#F8FAF9",
                            "fontWeight": "600",
                          },
                        ],
                      ]
                    }
                  >
                    Log
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "#2E5540",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#F8FAF9",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "rgba(248,250,249,0.65)",
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    To-Do
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#F8FAF9",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "rgba(248,250,249,0.65)",
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Habit
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "marginTop": 12,
                    },
                    undefined,
                  ]
                }
              >
                <TextInput
                  accessibilityLabel="Overlay content input"
                  autoFocus={true}
                  multiline={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Drop your thought…"
                  placeholderTextColor="#6A6F76"
                  scrollEnabled={false}
                  style={
                    [
                      {
                        "fontSize": 16,
                        "lineHeight": 22,
                        "minHeight": 120,
                        "paddingHorizontal": 16,
                        "paddingVertical": 12,
                      },
                      {
                        "backgroundColor": "#1A3328",
                        "borderColor": "#E0C47A",
                        "borderWidth": 2,
                        "color": "#0E1116",
                      },
                    ]
                  }
                  textAlignVertical="top"
                  value=""
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "marginTop": 8,
                    },
                    {
                      "alignItems": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Add reminder"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#121716",
                        "borderColor": "transparent",
                        "borderRadius": 12,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "gap": 8,
                        "height": 36,
                        "justifyContent": "center",
                        "opacity": 1,
                        "paddingHorizontal": 12,
                      },
                      false,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#F8FAF9",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        {
                          "color": "#F8FAF9",
                          "fontSize": 14,
                          "fontWeight": "600",
                        },
                      ]
                    }
                  >
                    Add reminder
                  </Text>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "marginTop": 12,
                    },
                    {
                      "alignItems": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Add details"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#121716",
                        "borderColor": "transparent",
                        "borderRadius": 12,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "gap": 8,
                        "height": 36,
                        "justifyContent": "center",
                        "opacity": 1,
                        "paddingHorizontal": 12,
                      },
                      false,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#F8FAF9",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        {
                          "color": "#F8FAF9",
                          "fontSize": 14,
                          "fontWeight": "600",
                        },
                      ]
                    }
                  >
                    Add details
                  </Text>
                </View>
                <View
                  style={
                    [
                      {
                        "flex": 1,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "gap": 8,
                      "marginTop": 12,
                    },
                    {
                      "flexWrap": "wrap",
                      "marginTop": 12,
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "backgroundColor": "#1A3328",
              "paddingBottom": 12,
            }
          }
        >
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": "#1A3328",
                  "borderTopColor": "#E7E2D9",
                  "borderTopWidth": 0.5,
                  "paddingBottom": 0,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Cancel"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 44,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 16,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Cancel
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                ]
              }
            />
            <View>
              <View
                accessibilityLabel="Save"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#2E5540",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "height": 44,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    },
                    false,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#F8FAF9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 22.4,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Save
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`UnifiedOverlayV2 — a11y visual checks (light & dark) matches accessibility + contrast expectations in light mode (snapshot) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "stretch",
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "translateY": 16,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "stretch",
            "backgroundColor": "#F9F6F1",
            "borderColor": "rgba(34,34,34,0.08)",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "borderTopWidth": 1,
            "elevation": 14,
            "height": 1067,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -6,
              "width": 0,
            },
            "shadowOpacity": 0.16,
            "shadowRadius": 14,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#F9F6F1",
              "paddingBottom": 4,
              "paddingTop": 8,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(0,0,0,0.16)",
                "borderRadius": 2,
                "height": 4,
                "width": 36,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "paddingBottom": 12,
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#F9F6F1",
                "borderBottomColor": "#E7E2D9",
                "borderBottomWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "PlusJakartaSans-Bold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 25,
                },
                {
                  "color": "#0E1116",
                  "fontWeight": "600",
                },
              ]
            }
          >
            New Log
          </Text>
        </View>
        <RCTScrollView
          contentContainerStyle={
            {
              "paddingBottom": 120,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
          keyboardShouldPersistTaps="handled"
        >
          <View>
            <View
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    {
                      "marginBottom": 12,
                    },
                  ]
                }
              >
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": true,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#0E1116",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "#222222",
                            "fontWeight": "600",
                          },
                        ],
                      ]
                    }
                  >
                    Log
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "#2E5540",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#0E1116",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "rgba(34,34,34,0.55)",
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    To-Do
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityRole="tab"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": false,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 8,
                      "left": 8,
                      "right": 8,
                      "top": 8,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#0E1116",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        [
                          {
                            "fontSize": 14,
                          },
                          {
                            "color": "rgba(34,34,34,0.55)",
                            "fontWeight": "500",
                          },
                        ],
                      ]
                    }
                  >
                    Habit
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "stretch",
                          "borderRadius": 8,
                          "height": 2,
                          "marginTop": 4,
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "marginTop": 12,
                    },
                    undefined,
                  ]
                }
              >
                <TextInput
                  accessibilityLabel="Overlay content input"
                  autoFocus={true}
                  multiline={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Drop your thought…"
                  placeholderTextColor="#6A6F76"
                  scrollEnabled={false}
                  style={
                    [
                      {
                        "fontSize": 16,
                        "lineHeight": 22,
                        "minHeight": 120,
                        "paddingHorizontal": 16,
                        "paddingVertical": 12,
                      },
                      {
                        "backgroundColor": "#F9F6F1",
                        "borderColor": "#E0C47A",
                        "borderWidth": 2,
                        "color": "#0E1116",
                      },
                    ]
                  }
                  textAlignVertical="top"
                  value=""
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "marginTop": 8,
                    },
                    {
                      "alignItems": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Add reminder"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "transparent",
                        "borderRadius": 12,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "gap": 8,
                        "height": 36,
                        "justifyContent": "center",
                        "opacity": 1,
                        "paddingHorizontal": 12,
                      },
                      false,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#0E1116",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        {
                          "color": "#0E1116",
                          "fontSize": 14,
                          "fontWeight": "600",
                        },
                      ]
                    }
                  >
                    Add reminder
                  </Text>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "marginTop": 12,
                    },
                    {
                      "alignItems": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Add details"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "transparent",
                        "borderRadius": 12,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "gap": 8,
                        "height": 36,
                        "justifyContent": "center",
                        "opacity": 1,
                        "paddingHorizontal": 12,
                      },
                      false,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#0E1116",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 22.4,
                        },
                        {
                          "color": "#0E1116",
                          "fontSize": 14,
                          "fontWeight": "600",
                        },
                      ]
                    }
                  >
                    Add details
                  </Text>
                </View>
                <View
                  style={
                    [
                      {
                        "flex": 1,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "gap": 8,
                      "marginTop": 12,
                    },
                    {
                      "flexWrap": "wrap",
                      "marginTop": 12,
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "backgroundColor": "#F9F6F1",
              "paddingBottom": 12,
            }
          }
        >
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": "#F9F6F1",
                  "borderTopColor": "#E7E2D9",
                  "borderTopWidth": 0.5,
                  "paddingBottom": 0,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Cancel"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 44,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 16,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Cancel
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                ]
              }
            />
            <View>
              <View
                accessibilityLabel="Save"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#2E5540",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "height": 44,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    },
                    false,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#0E1116",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 22.4,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Save
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
